# pyarchinit

./: .gitignore  .project  .readthedocs.yaml  3d_zoo.py  CLAUDE.md  INVENTARIO_MATERIALI_FIXES.md  Interactive_matrix.py  LICENSE.txt  PERIODIZZAZIONE.py  PlaceSelectionDialog.py  README.md  STRATIGRAPH_INTEGRATION.md  Sant_Arcangelo_La_Pieve94_3004.sqlite.updated  US_USM.py  US_USM.ui  __init__.py  add_compilatore_thesaurus.sql  check_db_structure.py  check_db_tables.py  check_ktm24_db.py  check_list.py  clean_pyc.py  create_test_tma.py  dbmanagment.py  dd.txt  debug_id_parent_issue.py  debug_ldct_aint_widgets.py  debug_loc01_search.py  debug_tma_combobox_values.py  debug_tma_delete.py  designer.py  dottoxml.py  final_fixes_summary.md  final_postgres_alignment.py  fix_all_databases_complete.py  fix_and_insert_missing_tma_thesaurus.py  fix_concurrency_init.py  fix_geometry_fields.py  fix_ktm24_complete.py  fix_ktm24_final.py  (+147 more)
.docugenius/: docugenius_core.py  project_context_analyzer.py  tutorial_generator.py
.qodo/: testConfig.toml
_rust_binaries/: pyarchinit_core.windows-x86_64.pyd
_rust_core/: Cargo.toml  pyproject.toml
_rust_core/src/: lib.rs
_rust_core/src/geostat/: mod.rs
_rust_core/src/graph/: mod.rs
_rust_core/src/matrix/: mod.rs
_rust_core/src/spatial/: mod.rs
api-doc/: .gitignore  README.md  mkdocs.yml  requirements.txt
dev_logs/: CHANGELOG.md
docs/: API_INDEX.md  API_REFERENCE.md  CHANGELOG_feature_cloudinary_integration.md  CLASS_DIAGRAM.md  FESTOS_IMPORT_README.md  FIX_SUMMARY.md  INVENTORY_IMPORT_FIXES.md  POTTERY_TOOLS.md  README.md  (+414 more)
(+2425 files in other folders)
