[package]
name = "pyarchinit_core"
version = "0.1.0"
edition = "2021"
description = "Rust acceleration for PyArchInit QGIS plugin"
license = "GPL-2.0"

[lib]
name = "pyarchinit_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py39"] }
numpy = "0.22"
ndarray = "0.16"
nalgebra = "0.33"
petgraph = "0.6"
rayon = "1.10"
